feat(): role, auth
done:
  login returns token
  endpoint guard with token
  register
  create & find role
todo:
  user verification
  forget pass

--- a/config.json
+++ b/config.json
@@ -1,17 +1,19 @@
 {
-  "debug": true,
-  "server": {
-    "address": ":9090"
-  },
-  "context":{
-    "timeout":2
-  },
-  "database": {
-      "host": "localhost",
-      "port": "3306",
-      "user": "root",
-      "pass": "password",
-      "name": "invoice"
-  }
-
+	"debug": true,
+	"server": {
+		"address": ":9090"
+	},
+	"context": {
+		"timeout": 2
+	},
+	"database": {
+		"host": "localhost",
+		"port": "3306",
+		"user": "root",
+		"pass": "password",
+		"name": "boilerplate"
+	},
+	"secret": {
+		"jwt": "jwt_secret_key_boilerplate"
+	}
 }
