--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: article_management_api
+    container_name: boilerplate_api
     ports:
       - 9090:9090
     depends_on:
@@ -14,16 +14,16 @@ services:
       - ./config.json:/app/config.json
 
   mysql:
-    image: mysql:5.7
-    container_name: go_clean_arch_mysql
+    image: mysql:8.0.31
+    container_name: go_boilerplate
     command: mysqld --user=root
     volumes:
-      - ./article.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./boilerplate.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - 3306:3306
     environment:
-      - MYSQL_DATABASE=article
-      - MYSQL_USER=root
+      - MYSQL_DATABASE=boilerplate
+      - MYSQL_USER=user
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=root
     healthcheck:
